# rdc-xpbd-taichi

./: .gitignore  .gitmodules  README.md  convergence_report.py  pyproject.toml  run_neohookean_usd.py  usd_export.py
assets/tetmesh/: armadillo.ele  armadillo.node  beast.ele  beast.node  cow.ele  cow.node  dragon.ele  dragon.node  horse.ele  horse.node  lucy.ele  lucy.node
scripts/: compare_convergence_armadillo.bat  demo.bat  figure7_armadillo_convergence.bat  init.bat  rebuild_patcher.bat
tools/: compare-method.bat  compare_convergence.py  summarize_errors.bat  summarize_errors.py
utils/: renderer.py
xpbd_gpu/: constants.py  neohookean_solver.py  sdf.py  xpbd_base.py
